
2.2 - Add model.fit method.

2.1 - Initial release of python version of fitnoise
      An earlier R version is included in Nesoni.